--- a/internal/embed/init/test-website/index.html
+++ b/internal/embed/init/test-website/index.html
@@ -3,94 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haloy Test Website</title>
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="styles.css">
+    <title>Haloy: It Works!</title>
+    <link rel="icon" href="haloy-logo.svg" type="image/svg+xml">
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            font-family: sans-serif;
             line-height: 1.6;
-            color: #333;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
+            color: #444;
+            padding: 2em;
+            background-color: #fdfdfd;
         }
         .container {
-            background-color: #f8f9fa;
+            max-width: 600px;
+            margin: 2em auto;
+            padding: 2em;
+            background-color: #fff;
+            border: 1px solid #eee;
             border-radius: 8px;
-            padding: 30px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #1e88e5;
-            margin-top: 0;
             text-align: center;
         }
-        .success-message {
-            background-color: #d4edda;
-            color: #155724;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
+        .logo {
+            max-width: 100px;
+            height: auto;
+            margin-bottom: 1em;
         }
-        code {
-            background-color: #f1f1f1;
-            padding: 2px 4px;
-            border-radius: 3px;
-            font-family: SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+        h1 {
+            color: #333;
+            margin-top: 0;
+        }
+        .success-message {
+            color: #28a745;
+            font-weight: bold;
+            margin-bottom: 1.5em;
         }
         ul {
-            margin-top: 20px;
+            list-style: none;
+            padding: 0;
+            margin-top: 1.5em;
+            text-align: left;
+            display: inline-block; /* Center the list block */
         }
         li {
-            margin-bottom: 10px;
+            margin-bottom: 0.8em;
+            position: relative;
+            padding-left: 1.5em;
+        }
+        li::before {
+            content: '✅'; /* Simple checkmark */
+            position: absolute;
+            left: 0;
+            color: #28a745;
+        }
+        .footer {
+            margin-top: 2em;
+            font-size: 0.9em;
+            color: #777;
+        }
+        .footer a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="favicon.svg" alt="Haloy Logo" class="logo">
+        <img src="haloy-logo.svg" alt="Haloy Logo" class="logo">
+
+        <h1>Haloy Test Site</h1>
 
         <div class="success-message">
-            <strong>Success!</strong> Your Haloy deployment is working correctly.
+            Hooray! Haloy hasn't exploded (yet).
         </div>
 
-        <h1>Haloy Test Website</h1>
-
-        <p>This is a simple test website deployed using Haloy. If you're seeing this page, it means:</p>
+        <p>If you're reading this, it most likely means everything is working. Specifically:</p>
 
         <ul>
-            <li>Your container was built and deployed successfully</li>
-            <li>HAProxy routing is configured correctly</li>
-            <li>The domain is properly connected to your service</li>
+            <li>The internet routed you correctly.</li>
+            <li>Your domain name actually points here!</li>
         </ul>
 
-        <h2>Next Steps</h2>
-
-        <p>Now that you have Haloy running, you can:</p>
-
-        <div class="feature-grid">
-            <div class="feature-card">
-                <h3>Deploy Applications</h3>
-                <p>Deploy your own applications using the CLI:</p>
-                <div class="command">haloy deploy haloy-test</div>
-            </div>
-
-            <div class="feature-card">
-                <h3>Manage Deployments</h3>
-                <p>Check the status of your deployments:</p>
-                <div class="command">haloy status</div>
-            </div>
-
-            <div class="feature-card">
-                <h3>Configure Domains</h3>
-                <p>Edit your config at:</p>
-                <div class="command">~/.config/haloy/apps.yml</div>
-            </div>
-        </div>
-
         <div class="footer">
-            <p>Deployed with ❤️ using <a href="https://github.com/ameistad/haloy">Haloy</a> v0.1.0</p>
+            <p>Served by <a href="https://github.com/ameistad/haloy">Haloy</a></p>
         </div>
     </div>
 </body>
