--- a/internal/embed/init/test-app/index.html
+++ b/internal/embed/init/test-app/index.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haloy: It Works!</title>
-    <link rel="icon" href="haloy-logo.svg" type="image/svg+xml">
+    <link rel="icon" href="haloy-curlew.svg" type="image/svg+xml">
     <style>
         body {
             font-family: sans-serif;
             line-height: 1.6;
-            color: #444;
+            color: #474747;
             padding: 2em;
-            background-color: #fdfdfd;
+            background-color: #f4fcff;
         }
         .container {
             max-width: 600px;
             margin: 2em auto;
             padding: 2em;
-            background-color: #fff;
-            border: 1px solid #eee;
-            border-radius: 8px;
             text-align: center;
         }
         .logo {
@@ -30,11 +27,6 @@
         h1 {
             color: #333;
             margin-top: 0;
-        }
-        .success-message {
-            color: #28a745;
-            font-weight: bold;
-            margin-bottom: 1.5em;
         }
         ul {
             list-style: none;
@@ -70,23 +62,14 @@
 </head>
 <body>
     <div class="container">
-        <img src="haloy-logo.svg" alt="Haloy Logo" class="logo">
+        <img src="haloy-curlew.svg" alt="Haloy Logo" class="logo">
 
-        <h1>Haloy Test Site</h1>
+        <h1>It works!</h1>
 
-        <div class="success-message">
-            Hooray! Haloy hasn't exploded (yet).
-        </div>
-
-        <p>If you're reading this, it most likely means everything is working. Specifically:</p>
-
-        <ul>
-            <li>The internet routed you correctly.</li>
-            <li>Your domain name actually points here!</li>
-        </ul>
+        <p>If you're reading this, it most likely means everything is working.</p>
 
         <div class="footer">
-            <p>Served by <a href="https://github.com/ameistad/haloy">Haloy</a></p>
+            <p>Thanks for using <a href="https://github.com/ameistad/haloy">Haloy</a></p>
         </div>
     </div>
 </body>
